--- a/index.html
+++ b/index.html
@@ -258,40 +258,60 @@
 
 				<div class="carousel-item marcas-single active">
 					<div class="row">
-						<div class="col-sm col-6">
-							<img src="assets/images/logos/dodge.jpg" class="d-block w-100">
-						</div>
-						<div class="col-sm col-6">
-							<img src="assets/images/logos/fiat.jpg" class="d-block w-100">
-						</div>
-						<div class="col-sm col-6">
-							<img src="assets/images/logos/ford.jpg" class="d-block w-100">
-						</div>
-						<div class="col-sm col-6">
-							<img src="assets/images/logos/honda.jpg" class="d-block w-100">
-						</div>
-						<div class="col-sm col-6">
-							<img src="assets/images/logos/jeep.jpg" class="d-block w-100">
-						</div>
+							<div class="col-sm col-6">
+								<a href="modelos.html">
+								<img src="assets/images/logos/dodge.jpg" class="d-block w-100">
+								</a>
+							</div>
+							<div class="col-sm col-6">
+								<a href="modelos.html">
+								<img src="assets/images/logos/fiat.jpg" class="d-block w-100">
+								</a>
+							</div>
+							<div class="col-sm col-6">
+								<a href="modelos.html">
+								<img src="assets/images/logos/ford.jpg" class="d-block w-100">
+								</a>
+							</div>
+							<div class="col-sm col-6">
+								<a href="modelos.html">
+								<img src="assets/images/logos/honda.jpg" class="d-block w-100">
+								</a>
+							</div>
+							<div class="col-sm col-6">
+								<a href="modelos.html">
+								<img src="assets/images/logos/jeep.jpg" class="d-block w-100">
+								</a>
+							</div>
 					</div>
 				</div>
 
 				<div class="carousel-item marcas-single">
 					<div class="row">
 						<div class="col-sm col-6 ">
+							<a href="modelos.html">
 							<img src="assets/images/logos/kia.jpg" class="d-block w-100">
+							</a>
 						</div>
 						<div class="col-sm col-6">
+							<a href="modelos.html">
 							<img src="assets/images/logos/mitsubishi.jpg" class="d-block w-100">
+							</a>
 						</div>
 						<div class="col-sm col-6">
+							<a href="modelos.html">
 							<img src="assets/images/logos/peugeot.jpg" class="d-block w-100">
+							</a>
 						</div>
 						<div class="col-sm col-6">
+							<a href="modelos.html">
 							<img src="assets/images/logos/ram.jpg" class="d-block w-100">
+							</a>
 						</div>
 						<div class="col-sm col-6">
+							<a href="modelos.html">
 							<img src="assets/images/logos/ssangyoung.jpg" class="d-block w-100">
+							</a>
 						</div>
 					</div>
 				</div>
@@ -322,7 +342,9 @@
 					<div class="row">
 						<div class="col-sm col-6">
 							<div class="destacado-card">
+								<a href="modelo-interior.html">
 								<img class="img-fluid" src="assets/images/autos/usados_front/1.png"> <!-- foto del auto destacado -->
+								</a>
 								<div class="destacado-texto-principal">
 									<h4>
 										SSANGYONG
@@ -342,7 +364,9 @@
 						</div>
 						<div class="col-sm col-6">
 							<div class="destacado-card">
+								<a href="modelo-interior.html">
 								<img class="img-fluid" src="assets/images/autos/usados_front/2.png"> <!-- foto del auto destacado -->
+								</a>
 								<div class="destacado-texto-principal">
 									<h4>
 										MAZDA 
@@ -362,7 +386,9 @@
 						</div>
 						<div class="col-sm col-6">
 							<div class="destacado-card">
+								<a href="modelo-interior.html">
 								<img class="img-fluid" src="assets/images/autos/usados_front/3.png"> <!-- foto del auto destacado -->
+								</a>
 								<div class="destacado-texto-principal">
 									<h4>
 										SUZUKI 
@@ -382,7 +408,9 @@
 						</div>
 						<div class="col-sm col-6">
 							<div class="destacado-card">
+								<a href="modelo-interior.html">
 								<img class="img-fluid" src="assets/images/autos/usados_front/4.png"> <!-- foto del auto destacado -->
+								</a>
 								<div class="destacado-texto-principal">
 									<h4>
 										CHEVROLET
@@ -402,7 +430,9 @@
 						</div>
 						<div class="col-sm col-6">
 							<div class="destacado-card">
+								<a href="modelo-interior.html">
 								<img class="img-fluid" src="assets/images/autos/usados_front/5.png"> <!-- foto del auto destacado -->
+								</a>
 								<div class="destacado-texto-principal">
 									<h4>
 										NISSAN
@@ -427,7 +457,9 @@
 					<div class="row">
 						<div class="col-sm col-6">
 							<div class="destacado-card">
+								<a href="modelo-interior.html">
 								<img class="img-fluid" src="assets/images/autos/usados_front/6.png"> <!-- foto del auto destacado -->
+								</a>
 								<div class="destacado-texto-principal">
 									<h4>
 										CHEVROLET
@@ -447,7 +479,9 @@
 						</div>
 						<div class="col-sm col-6">
 							<div class="destacado-card">
+								<a href="modelo-interior.html">
 								<img class="img-fluid" src="assets/images/autos/usados_front/7.png"> <!-- foto del auto destacado -->
+								</a>
 								<div class="destacado-texto-principal">
 									<h4>
 										RENAULT
@@ -467,7 +501,9 @@
 						</div>
 						<div class="col-sm col-6">
 							<div class="destacado-card">
+								<a href="modelo-interior.html">
 								<img class="img-fluid" src="assets/images/autos/usados_front/8.png"> <!-- foto del auto destacado -->
+								</a>
 								<div class="destacado-texto-principal">
 									<h4>
 										PEUGEOT
@@ -487,7 +523,9 @@
 						</div>
 						<div class="col-sm col-6">
 							<div class="destacado-card">
+								<a href="modelo-interior.html">
 								<img class="img-fluid" src="assets/images/autos/usados_front/9.png"> <!-- foto del auto destacado -->
+								</a>
 								<div class="destacado-texto-principal">
 									<h4>
 										VOLVO
@@ -507,7 +545,9 @@
 						</div>
 						<div class="col-sm col-6">
 							<div class="destacado-card">
+								<a href="modelo-interior.html">
 								<img class="img-fluid" src="assets/images/autos/usados_front/10.png"> <!-- foto del auto destacado -->
+								</a>
 								<div class="destacado-texto-principal">
 									<h4>
 										HYUNDAI
