--- a/noticias.html
+++ b/noticias.html
@@ -80,82 +80,106 @@
 	<section class="container noticias">
 		<div class="row">
 			<div class="col-md-5 noticias-single">
+				<a href="noticia-1.html">
 				<div class="noticias-titulo col-md-10 col-md-10">
 					<h6>Noticia 1</h6>
 					<p>Bajada de la noticia</p>
 				</div>	
+				</a>
 			</div>
 			<div class="col-md-4 noticias-single">
+				<a href="noticia-1.html">
 				<div class="noticias-titulo col-md-10 col-md-10">
 					<h6>Noticia 1</h6>
 					<p>Bajada de la noticia</p>
-				</div>		
+				</div>	
+				</a>	
 			</div>
 			<div class="col-md-3 noticias-single">
+				<a href="noticia-1.html">
 				<div class="noticias-titulo col-md-10 col-md-10">
 					<h6>Noticia 1</h6>
 					<p>Bajada de la noticia</p>
-				</div>		
+				</div>	
+				</a>		
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-md-3 noticias-single">
+				<a href="noticia-1.html">
 				<div class="noticias-titulo col-md-10 col-md-10">
 					<h6>Noticia 1</h6>
 					<p>Bajada de la noticia</p>
 				</div>	
+				</a>	
 			</div>
 			<div class="col-md-3 noticias-single">
+				<a href="noticia-1.html">
 				<div class="noticias-titulo col-md-10 col-md-10">
 					<h6>Noticia 1</h6>
 					<p>Bajada de la noticia</p>
 				</div>	
+				</a>	
 			</div>
 			<div class="col-md-6 noticias-single">
+				<a href="noticia-1.html">
 				<div class="noticias-titulo col-md-10 col-md-10">
 					<h6>Noticia 1</h6>
 					<p>Bajada de la noticia</p>
 				</div>	
+				</a>	
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-md-5 noticias-single">
+				<a href="noticia-1.html">
 				<div class="noticias-titulo col-md-10 col-md-10">
 					<h6>Noticia 1</h6>
 					<p>Bajada de la noticia</p>
 				</div>	
+				</a>	
 			</div>
 			<div class="col-md-4 noticias-single">
+				<a href="noticia-1.html">
 				<div class="noticias-titulo col-md-10 col-md-10">
 					<h6>Noticia 1</h6>
 					<p>Bajada de la noticia</p>
-				</div>		
+				</div>	
+				</a>		
 			</div>
 			<div class="col-md-3 noticias-single">
+				<a href="noticia-1.html">
 				<div class="noticias-titulo col-md-10 col-md-10">
 					<h6>Noticia 1</h6>
 					<p>Bajada de la noticia</p>
-				</div>		
+				</div>	
+				</a>	
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-md-3 noticias-single">
+				<a href="noticia-1.html">
 				<div class="noticias-titulo col-md-10 col-md-10">
 					<h6>Noticia 1</h6>
 					<p>Bajada de la noticia</p>
 				</div>	
+				</a>	
 			</div>
 			<div class="col-md-3 noticias-single">
+				<a href="noticia-1.html">
 				<div class="noticias-titulo col-md-10 col-md-10">
 					<h6>Noticia 1</h6>
 					<p>Bajada de la noticia</p>
 				</div>	
+				</a>
 			</div>
 			<div class="col-md-6 noticias-single">
+				<a href="noticia-1.html">
 				<div class="noticias-titulo col-md-10 col-md-10">
 					<h6>Noticia 1</h6>
 					<p>Bajada de la noticia</p>
 				</div>	
+				</a>	
 			</div>
 		</div>
 	</section>
