--- a/nuevos.html
+++ b/nuevos.html
@@ -259,7 +259,8 @@
 					<div class="row">
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/1.png"> <!-- foto del auto destacado -->
+								<a href="modelo-interior.html" >
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/1.png"> <!-- foto del auto destacado --> </a>
 								<div class="destacado-texto-principal">
 									<h4>
 										Ford
@@ -279,7 +280,8 @@
 						</div>
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/2.png"> <!-- foto del auto destacado -->
+								<a href="modelo-interior.html" >
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/2.png"> <!-- foto del auto destacado --> </a>
 								<div class="destacado-texto-principal">
 									<h4>
 										Ford
@@ -299,7 +301,8 @@
 						</div>
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/3.png"> <!-- foto del auto destacado -->
+								<a href="modelo-interior.html" >
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/3.png"> <!-- foto del auto destacado --> </a>
 								<div class="destacado-texto-principal">
 									<h4>
 										Ford
@@ -319,7 +322,8 @@
 						</div>
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/4.png"> <!-- foto del auto destacado -->
+								<a href="modelo-interior.html" >
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/4.png"> <!-- foto del auto destacado --> </a>
 								<div class="destacado-texto-principal">
 									<h4>
 										Ford
@@ -339,7 +343,8 @@
 						</div>
 						<div class="col margin-ultimo-col">
 							<div class="destacado-card extencion-ultimo-col">
-								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/5.png"> <!-- foto del auto destacado -->
+								<a href="modelo-interior.html" >
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/5.png"> <!-- foto del auto destacado --> </a>
 								<div class="destacado-texto-principal">
 									<h4>
 										Ford
@@ -364,7 +369,8 @@
 					<div class="row">
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/6.png"> <!-- foto del auto destacado -->
+								<a href="modelo-interior.html" >
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/6.png"> <!-- foto del auto destacado --> </a>
 								<div class="destacado-texto-principal">
 									<h4>
 										Ford
@@ -384,7 +390,8 @@
 						</div>
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/7.png"> <!-- foto del auto destacado -->
+								<a href="modelo-interior.html" >
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/7.png"> <!-- foto del auto destacado --> </a>
 								<div class="destacado-texto-principal">
 									<h4>
 										Ford
@@ -404,7 +411,8 @@
 						</div>
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/8.png"> <!-- foto del auto destacado -->
+								<a href="modelo-interior.html" >
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/8.png"> <!-- foto del auto destacado --> </a>
 								<div class="destacado-texto-principal">
 									<h4>
 										Ford
@@ -424,7 +432,8 @@
 						</div>
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/9.png"> <!-- foto del auto destacado -->
+								<a href="modelo-interior.html" >
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/9.png"> <!-- foto del auto destacado --> </a>
 								<div class="destacado-texto-principal">
 									<h4>
 										Ford
@@ -444,7 +453,8 @@
 						</div>
 						<div class="col margin-ultimo-col">
 							<div class="destacado-card extencion-ultimo-col">
-								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/10.png"> <!-- foto del auto destacado -->
+								<a href="modelo-interior.html" >
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/10.png"> <!-- foto del auto destacado --> </a>
 								<div class="destacado-texto-principal">
 									<h4>
 										Ford
@@ -491,7 +501,8 @@
 					<div class="row">
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/11.png"> <!-- foto del auto destacado -->
+								<a href="modelo-interior.html" >
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/11.png"> <!-- foto del auto destacado --> </a>
 								<div class="destacado-texto-principal">
 									<h4>
 										Kia
@@ -511,7 +522,8 @@
 						</div>
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/12.png"> <!-- foto del auto destacado -->
+								<a href="modelo-interior.html" >
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/12.png"> <!-- foto del auto destacado --> </a>
 								<div class="destacado-texto-principal">
 									<h4>
 										Kia
@@ -531,7 +543,8 @@
 						</div>
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/13.png"> <!-- foto del auto destacado -->
+								<a href="modelo-interior.html" >
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/13.png"> <!-- foto del auto destacado --> </a>
 								<div class="destacado-texto-principal">
 									<h4>
 										Kia
@@ -551,7 +564,8 @@
 						</div>
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/14.png"> <!-- foto del auto destacado -->
+								<a href="modelo-interior.html" >
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/14.png"> <!-- foto del auto destacado --> </a>
 								<div class="destacado-texto-principal">
 									<h4>
 										Kia
@@ -571,7 +585,8 @@
 						</div>
 						<div class="col margin-ultimo-col">
 							<div class="destacado-card extencion-ultimo-col">
-								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/15.png"> <!-- foto del auto destacado -->
+								<a href="modelo-interior.html" >
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/15.png"> <!-- foto del auto destacado --> </a>
 								<div class="destacado-texto-principal">
 									<h4>
 										Kia
@@ -596,7 +611,8 @@
 					<div class="row">
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/16.png"> <!-- foto del auto destacado -->
+								<a href="modelo-interior.html" >
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/16.png"> <!-- foto del auto destacado --> </a>
 								<div class="destacado-texto-principal">
 									<h4>
 										Kia
@@ -616,7 +632,8 @@
 						</div>
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/17.png"> <!-- foto del auto destacado -->
+								<a href="modelo-interior.html" >
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/17.png"> <!-- foto del auto destacado --> </a>
 								<div class="destacado-texto-principal">
 									<h4>
 										Kia
@@ -636,7 +653,8 @@
 						</div>
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/18.png"> <!-- foto del auto destacado -->
+								<a href="modelo-interior.html" >
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/18.png"> <!-- foto del auto destacado --> </a>
 								<div class="destacado-texto-principal">
 									<h4>
 										Kia
@@ -656,7 +674,8 @@
 						</div>
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/19.png"> <!-- foto del auto destacado -->
+								<a href="modelo-interior.html" >
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/19.png"> <!-- foto del auto destacado --> </a>
 								<div class="destacado-texto-principal">
 									<h4>
 										Kia
@@ -676,7 +695,8 @@
 						</div>
 						<div class="col margin-ultimo-col">
 							<div class="destacado-card extencion-ultimo-col">
-								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/20.png"> <!-- foto del auto destacado -->
+								<a href="modelo-interior.html" >
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/20.png"> <!-- foto del auto destacado --> </a>
 								<div class="destacado-texto-principal">
 									<h4>
 										Kia
@@ -723,7 +743,8 @@
 					<div class="row">
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/21.png"> <!-- foto del auto destacado -->
+								<a href="modelo-interior.html" >
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/21.png"> <!-- foto del auto destacado --> </a>
 								<div class="destacado-texto-principal">
 									<h4>
 										Jeep
@@ -743,7 +764,8 @@
 						</div>
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/22.png"> <!-- foto del auto destacado -->
+								<a href="modelo-interior.html" >
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/22.png"> <!-- foto del auto destacado --> </a>
 								<div class="destacado-texto-principal">
 									<h4>
 										Jeep
@@ -763,7 +785,8 @@
 						</div>
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/23.png"> <!-- foto del auto destacado -->
+								<a href="modelo-interior.html" >
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/23.png"> <!-- foto del auto destacado --> </a>
 								<div class="destacado-texto-principal">
 									<h4>
 										Jeep
@@ -783,7 +806,8 @@
 						</div>
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/24.png"> <!-- foto del auto destacado -->
+								<a href="modelo-interior.html" >
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/24.png"> <!-- foto del auto destacado --> </a>
 								<div class="destacado-texto-principal">
 									<h4>
 										Jeep
@@ -803,7 +827,8 @@
 						</div>
 						<div class="col margin-ultimo-col">
 							<div class="destacado-card extencion-ultimo-col">
-								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/25.png"> <!-- foto del auto destacado -->
+								<a href="modelo-interior.html" >
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/25.png"> <!-- foto del auto destacado --> </a>
 								<div class="destacado-texto-principal">
 									<h4>
 										Jeep
