--- a/usados.html
+++ b/usados.html
@@ -259,7 +259,9 @@
 					<div class="row">
 						<div class="col">
 							<div class="destacado-card">
+								<a href="modelo-interior.html">
 								<img class="img-fluid" src="assets/images/autos/usados_front/1.png"> <!-- foto del auto destacado -->
+								</a>
 								<div class="destacado-texto-principal">
 									<h4>
 										SSANGYONG
@@ -279,7 +281,9 @@
 						</div>
 						<div class="col">
 							<div class="destacado-card">
+								<a href="modelo-interior.html">
 								<img class="img-fluid" src="assets/images/autos/usados_front/2.png"> <!-- foto del auto destacado -->
+								</a>
 								<div class="destacado-texto-principal">
 									<h4>
 										MAZDA 
@@ -299,7 +303,9 @@
 						</div>
 						<div class="col">
 							<div class="destacado-card">
+								<a href="modelo-interior.html">
 								<img class="img-fluid" src="assets/images/autos/usados_front/3.png"> <!-- foto del auto destacado -->
+								</a>
 								<div class="destacado-texto-principal">
 									<h4>
 										SUZUKI 
@@ -319,7 +325,9 @@
 						</div>
 						<div class="col">
 							<div class="destacado-card">
+								<a href="modelo-interior.html">
 								<img class="img-fluid" src="assets/images/autos/usados_front/4.png"> <!-- foto del auto destacado -->
+								</a>
 								<div class="destacado-texto-principal">
 									<h4>
 										CHEVROLET
@@ -339,7 +347,9 @@
 						</div>
 						<div class="col margin-ultimo-col">
 							<div class="destacado-card extencion-ultimo-col">
+								<a href="modelo-interior.html">
 								<img class="img-fluid" src="assets/images/autos/usados_front/5.png"> <!-- foto del auto destacado -->
+								</a>
 								<div class="destacado-texto-principal">
 									<h4>
 										NISSAN
@@ -364,7 +374,9 @@
 					<div class="row">
 						<div class="col">
 							<div class="destacado-card">
+								<a href="modelo-interior.html">
 								<img class="img-fluid" src="assets/images/autos/usados_front/6.png"> <!-- foto del auto destacado -->
+								</a>
 								<div class="destacado-texto-principal">
 									<h4>
 										CHEVROLET
@@ -384,7 +396,9 @@
 						</div>
 						<div class="col">
 							<div class="destacado-card">
+								<a href="modelo-interior.html">
 								<img class="img-fluid" src="assets/images/autos/usados_front/7.png"> <!-- foto del auto destacado -->
+								</a>
 								<div class="destacado-texto-principal">
 									<h4>
 										RENAULT
@@ -404,7 +418,9 @@
 						</div>
 						<div class="col">
 							<div class="destacado-card">
+								<a href="modelo-interior.html">
 								<img class="img-fluid" src="assets/images/autos/usados_front/8.png"> <!-- foto del auto destacado -->
+								</a>
 								<div class="destacado-texto-principal">
 									<h4>
 										PEUGEOT
@@ -424,7 +440,9 @@
 						</div>
 						<div class="col">
 							<div class="destacado-card">
+								<a href="modelo-interior.html">
 								<img class="img-fluid" src="assets/images/autos/usados_front/9.png"> <!-- foto del auto destacado -->
+								</a>
 								<div class="destacado-texto-principal">
 									<h4>
 										VOLVO
@@ -444,7 +462,9 @@
 						</div>
 						<div class="col margin-ultimo-col">
 							<div class="destacado-card extencion-ultimo-col">
+								<a href="modelo-interior.html">
 								<img class="img-fluid" src="assets/images/autos/usados_front/10.png"> <!-- foto del auto destacado -->
+								</a>
 								<div class="destacado-texto-principal">
 									<h4>
 										HYUNDAI
@@ -491,7 +511,9 @@
 					<div class="row">
 						<div class="col">
 							<div class="destacado-card">
+								<a href="modelo-interior.html">
 								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/26.png"> <!-- foto del auto destacado -->
+								</a>
 								<div class="destacado-texto-principal">
 									<h4>
 										SSANGYONG
@@ -511,7 +533,9 @@
 						</div>
 						<div class="col">
 							<div class="destacado-card">
+								<a href="modelo-interior.html">
 								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/27.png"> <!-- foto del auto destacado -->
+								</a>
 								<div class="destacado-texto-principal">
 									<h4>
 										SSANGYONG
@@ -531,7 +555,9 @@
 						</div>
 						<div class="col">
 							<div class="destacado-card">
+								<a href="modelo-interior.html">
 								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/28.png"> <!-- foto del auto destacado -->
+								</a>
 								<div class="destacado-texto-principal">
 									<h4>
 										CHEVROLET
@@ -551,7 +577,9 @@
 						</div>
 						<div class="col">
 							<div class="destacado-card">
+								<a href="modelo-interior.html">
 								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/29.png"> <!-- foto del auto destacado -->
+								</a>
 								<div class="destacado-texto-principal">
 									<h4>
 										VOLKSWAGEN
@@ -571,7 +599,9 @@
 						</div>
 						<div class="col margin-ultimo-col">
 							<div class="destacado-card extencion-ultimo-col">
+								<a href="modelo-interior.html">
 								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/30.png"> <!-- foto del auto destacado -->
+								</a>
 								<div class="destacado-texto-principal">
 									<h4>
 										TOYOTA
@@ -596,7 +626,9 @@
 					<div class="row">
 						<div class="col">
 							<div class="destacado-card">
+								<a href="modelo-interior.html">
 								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/31.png"> <!-- foto del auto destacado -->
+								</a>
 								<div class="destacado-texto-principal">
 									<h4>
 										MITSUBISHI
@@ -616,7 +648,9 @@
 						</div>
 						<div class="col">
 							<div class="destacado-card">
+								<a href="modelo-interior.html">
 								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/32.png"> <!-- foto del auto destacado -->
+								</a>
 								<div class="destacado-texto-principal">
 									<h4>
 										SSANGYONG 
@@ -636,7 +670,9 @@
 						</div>
 						<div class="col">
 							<div class="destacado-card">
+								<a href="modelo-interior.html">
 								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/33.png"> <!-- foto del auto destacado -->
+								</a>
 								<div class="destacado-texto-principal">
 									<h4>
 										MITSUBISHI 
@@ -656,7 +692,9 @@
 						</div>
 						<div class="col">
 							<div class="destacado-card">
+								<a href="modelo-interior.html">
 								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/34.png"> <!-- foto del auto destacado -->
+								</a>
 								<div class="destacado-texto-principal">
 									<h4>
 										MITSUBISHI
@@ -676,7 +714,9 @@
 						</div>
 						<div class="col margin-ultimo-col">
 							<div class="destacado-card extencion-ultimo-col">
+								<a href="modelo-interior.html">
 								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/35.png"> <!-- foto del auto destacado -->
+								</a>
 								<div class="destacado-texto-principal">
 									<h4>
 										NISSAN
@@ -723,7 +763,9 @@
 					<div class="row">
 						<div class="col">
 							<div class="destacado-card">
+								<a href="modelo-interior.html">
 								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/36.png"> <!-- foto del auto destacado -->
+								</a>
 								<div class="destacado-texto-principal">
 									<h4>
 										TOYOTA
@@ -743,7 +785,9 @@
 						</div>
 						<div class="col">
 							<div class="destacado-card">
+								<a href="modelo-interior.html">
 								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/37.png"> <!-- foto del auto destacado -->
+								</a>
 								<div class="destacado-texto-principal">
 									<h4>
 										MERCEDES-BENZ
@@ -763,7 +807,9 @@
 						</div>
 						<div class="col">
 							<div class="destacado-card">
+								<a href="modelo-interior.html">
 								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/38.png"> <!-- foto del auto destacado -->
+								</a>
 								<div class="destacado-texto-principal">
 									<h4>
 										Jeep
@@ -783,7 +829,9 @@
 						</div>
 						<div class="col">
 							<div class="destacado-card">
+								<a href="modelo-interior.html">
 								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/39.png"> <!-- foto del auto destacado -->
+								</a>
 								<div class="destacado-texto-principal">
 									<h4>
 										VOLVO 
@@ -803,7 +851,9 @@
 						</div>
 						<div class="col margin-ultimo-col">
 							<div class="destacado-card extencion-ultimo-col">
+								<a href="modelo-interior.html">
 								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/40.png"> <!-- foto del auto destacado -->
+								</a>
 								<div class="destacado-texto-principal">
 									<h4>
 										HYUNDAI
@@ -828,7 +878,9 @@
 					<div class="row">
 						<div class="col">
 							<div class="destacado-card">
+								<a href="modelo-interior.html">
 								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/41.png"> <!-- foto del auto destacado -->
+								</a>
 								<div class="destacado-texto-principal">
 									<h4>
 										HYUNDAI
@@ -848,7 +900,9 @@
 						</div>
 						<div class="col">
 							<div class="destacado-card">
+								<a href="modelo-interior.html">
 								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/42.png"> <!-- foto del auto destacado -->
+								</a>
 								<div class="destacado-texto-principal">
 									<h4>
 										Kia
@@ -868,7 +922,9 @@
 						</div>
 						<div class="col">
 							<div class="destacado-card">
+								<a href="modelo-interior.html">
 								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/43.png"> <!-- foto del auto destacado -->
+								</a>
 								<div class="destacado-texto-principal">
 									<h4>
 										SUZUKI
@@ -888,7 +944,9 @@
 						</div>
 						<div class="col">
 							<div class="destacado-card">
+								<a href="modelo-interior.html">
 								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/44.png"> <!-- foto del auto destacado -->
+								</a>
 								<div class="destacado-texto-principal">
 									<h4>
 										RENAULT
@@ -908,7 +966,9 @@
 						</div>
 						<div class="col margin-ultimo-col">
 							<div class="destacado-card extencion-ultimo-col">
+								<a href="modelo-interior.html">
 								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/45.png"> <!-- foto del auto destacado -->
+								</a>
 								<div class="destacado-texto-principal">
 									<h4>
 										AUDI
