cotizador bnt position static y footer

--- a/index.html
+++ b/index.html
@@ -159,7 +159,11 @@
 					                    </select>
 				                	</div>
 				                </div>
-				                	<button type="submit" onClick="ga('send', 'event', 'Boton', 'Click');" class="btn btn-primary boton-enviar-sistema estilo-boton-enviar">Cotizar</button>
+				                <div class="row">
+				                	<div class="col-sm offset-md-8">
+				                		<button type="submit" onClick="ga('send', 'event', 'Boton', 'Click');" class="btn btn-primary boton-enviar-sistema estilo-boton-enviar">Cotizar</button>
+				                	</div>     	
+				                </div>
 				              
 				          </form>
 				        </div>
