--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 			<div class="col-md-4 visible-lg visible-md">
 				<div class="sistema-caja">
 					<div class="sistema-caja-gris">
-					<div class="row buscador">
+					<div class="row buscador justify-content-end">
 						<form class="search-container" action="//llamaswill.tumblr.com/search">
 							  <input id="search-box" type="text" class="search-box" name="q" />
 							  <label for="search-box"><span class="fas fa-search search-icon"></span></label>
