--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<span class="navbar-toggler-icon"></span>
 		</button>
 
-		<div class="collapse navbar-collapse navbar-vd-principal" id="navbarSupportedContent">
+		<div class="collapse navbar-collapse navbar-vd-principal justify-content-end" id="navbarSupportedContent">
 			<ul class="navbar-nav menu_dv">
 				<li class="nav-item">
 					<a class="nav-link" href="nuevos.html">
@@ -52,8 +52,12 @@
 						Contacto
 					</a>
 				</li>
-
 			</ul>
+			<form class="justify-content-end">
+				<input type="search" class="service-search rounded" onfocus="this.placeholder = ''" />
+				<button class="btn btn-outline-dark" name="search">
+					<i class="fas fa-search"></i></button>
+			</form>
 		</div>
 	</nav>
 	<!-- <div class="container-fluid menu-principal">
